{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 22,
  "lineage": "576eff75-2f30-fa8e-5bc8-23a9164503fa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "secure_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-015e87f8357cb7c65",
            "arn": "arn:aws:ec2:sa-east-1:903913341413:instance/i-0a33b1129a960b8a4",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "cloud-security-lab-ec2-profile",
            "id": "i-0a33b1129a960b8a4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03c6729bff1f2a0e9",
            "private_dns": "ip-10-10-1-168.sa-east-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.168",
            "public_dns": "ec2-18-229-141-97.sa-east-1.compute.amazonaws.com",
            "public_ip": "18.229.141.97",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:sa-east-1:903913341413:key/7b27d9f6-8e27-4951-a379-414a9927139b",
                "throughput": 125,
                "volume_id": "vol-0a33953a50fcaf708",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-074487dc6c8b980ba",
            "tags": {
              "Environment": "secure",
              "ManagedBy": "Terraform",
              "Name": "cloud-security-lab-secure-ec2"
            },
            "tags_all": {
              "Environment": "secure",
              "ManagedBy": "Terraform",
              "Name": "cloud-security-lab-secure-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c5f70bf815a7be54"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.limited_role",
            "aws_security_group.secure_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.lab_vpc",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:903913341413:internet-gateway/igw-0d9a82fdb3ac5a4de",
            "id": "igw-0d9a82fdb3ac5a4de",
            "owner_id": "903913341413",
            "tags": {
              "Environment": "secure",
              "ManagedBy": "Terraform",
              "Name": "cloud-security-lab-igw"
            },
            "tags_all": {
              "Environment": "secure",
              "ManagedBy": "Terraform",
              "Name": "cloud-security-lab-igw"
            },
            "vpc_id": "vpc-0213d2f2ee62187eb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:903913341413:route-table/rtb-00977d511a54eab6b",
            "id": "rtb-00977d511a54eab6b",
            "owner_id": "903913341413",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d9a82fdb3ac5a4de",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "secure",
              "ManagedBy": "Terraform",
              "Name": "cloud-security-lab-public-rt"
            },
            "tags_all": {
              "Environment": "secure",
              "ManagedBy": "Terraform",
              "Name": "cloud-security-lab-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0213d2f2ee62187eb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04cbbfa8250f6efa0",
            "route_table_id": "rtb-00977d511a54eab6b",
            "subnet_id": "subnet-074487dc6c8b980ba"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "secure_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:903913341413:security-group/sg-0c5f70bf815a7be54",
            "description": "Restrictive security group for secure EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c5f70bf815a7be54",
            "ingress": [
              {
                "cidr_blocks": [
                  "201.75.208.176/32"
                ],
                "description": "SSH only from authorized IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "cloud-security-lab-secure-sg",
            "name_prefix": "",
            "owner_id": "903913341413",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "secure",
              "ManagedBy": "Terraform",
              "Name": "cloud-security-lab-secure-sg"
            },
            "tags_all": {
              "Environment": "secure",
              "ManagedBy": "Terraform",
              "Name": "cloud-security-lab-secure-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0213d2f2ee62187eb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:903913341413:subnet/subnet-0835309ca73fe5159",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0835309ca73fe5159",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "903913341413",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "secure",
              "ManagedBy": "Terraform",
              "Name": "cloud-security-lab-private-subnet",
              "Tier": "Private"
            },
            "tags_all": {
              "Environment": "secure",
              "ManagedBy": "Terraform",
              "Name": "cloud-security-lab-private-subnet",
              "Tier": "Private"
            },
            "vpc_id": "vpc-0213d2f2ee62187eb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:903913341413:subnet/subnet-074487dc6c8b980ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074487dc6c8b980ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "903913341413",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "secure",
              "ManagedBy": "Terraform",
              "Name": "cloud-security-lab-public-subnet",
              "Tier": "Public"
            },
            "tags_all": {
              "Environment": "secure",
              "ManagedBy": "Terraform",
              "Name": "cloud-security-lab-public-subnet",
              "Tier": "Public"
            },
            "vpc_id": "vpc-0213d2f2ee62187eb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lab_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:903913341413:vpc/vpc-0213d2f2ee62187eb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0315fbd74a22922d0",
            "default_route_table_id": "rtb-0ab57f799dd675096",
            "default_security_group_id": "sg-050ccfe961be90b64",
            "dhcp_options_id": "dopt-0b88789cebe3be39f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0213d2f2ee62187eb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ab57f799dd675096",
            "owner_id": "903913341413",
            "tags": {
              "Environment": "secure",
              "ManagedBy": "Terraform",
              "Name": "cloud-security-lab-vpc"
            },
            "tags_all": {
              "Environment": "secure",
              "ManagedBy": "Terraform",
              "Name": "cloud-security-lab-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}